# dicomifier

./: .bumpversion.cfg  .travis.yml  BrukerToDicom_Dictionary.xml  CMakeLists.txt  Diffusion.ipynb  FindLog4Cpp.cmake  FindNIfTI.cmake  FindOdil.cmake  FindV8.cmake  README.md  dicomifier.spec  generate_doc.py  install_dicomifier
configuration/: CMakeLists.txt  private_dictionary.xml
configuration/Dictionary_BrukerToDICOM/: EnhancedMRImageStorage.xml  MRImageStorage.xml
configuration/script_bruker2dicom/: MRImageStorage.js  frameIndexGenerator.js  functions.js
configuration/script_dicom2nifti/: MRImageStorage.js
examples/: CMakeLists.txt  dump_as_json.cpp  dump_as_xml.cpp  fsl-dwi  javascriptvm.cpp  parse-csa
src/: CMakeLists.txt
src/appli/: CMakeLists.txt  bruker2dicom  bruker2dicom.cpp  dicom2nifti.cpp  dicomifier.cpp  main.cpp  main_bruker2dicom.cpp  main_ihm.cpp
src/bruker/: Bruker2Dicom.cpp  Bruker2Dicom.h  BrukerDataset.cpp  BrukerDataset.h  BrukerDirectory.cpp  BrukerDirectory.h  BrukerException.cpp  BrukerException.h  BrukerFieldData.cpp  BrukerFieldData.h  BrukerSystem.h  RulesAction.cpp  RulesAction.h  RulesDocument.cpp  RulesDocument.h
src/cli/: CMakeLists.txt  bruker2dicom  dicom2nifti  dicomifier
src/core/: Factory.cpp  Factory.h  Factory.txx  Object.h
src/core/actions/: Action.cpp  Action.h
src/core/conditions/: All.cpp  All.h  Any.cpp  Any.h  Condition.cpp  Condition.h  False.cpp  False.h  Not.cpp  Not.h  True.cpp  True.h
src/dicom/: ElementTraits.cpp  ElementTraits.h
src/dicom/actions/: DeleteElement.cpp  DeleteElement.h  EmptyElement.cpp  EmptyElement.h  SetElement.h  SetElement.txx
src/dicom/conditions/: ElementMatch.h  ElementMatch.txx
src/gui/: BaseFrame.cpp  BaseFrame.h  CMakeLists.txt  GenerationFrame.cpp  GenerationFrame.h  GenerationFrame.ui  GenerationResultItem.h  PACSConfigurationFrame.cpp  PACSConfigurationFrame.h  PACSConfigurationFrame.ui  PreferencesFrame.cpp  PreferencesFrame.h  PreferencesFrame.ui  ProtocolsFrame.cpp  ProtocolsFrame.h  ProtocolsFrame.ui  ResultsFrame.cpp  ResultsFrame.h  ResultsFrame.ui  SubjectsFrame.cpp  SubjectsFrame.h  SubjectsFrame.ui  dicomifier.cpp  mainframe.cpp  mainframe.h  mainframe.ui  resources.qrc
src/gui/components/: GenerationResultItem.cpp  GenerationResultItem.h  PACSTreeItem.cpp  PACSTreeItem.h  PACSTreeModel.cpp  PACSTreeModel.h  PACSTreeView.cpp  PACSTreeView.h  ProtocolsTreeModel.cpp  ProtocolsTreeModel.h  ProtocolsTreeView.cpp  ProtocolsTreeView.h  ResultsTreeModel.cpp  ResultsTreeModel.h  ResultsTreeView.cpp  ResultsTreeView.h  SubjectsTreeModel.cpp  SubjectsTreeModel.h  SubjectsTreeView.cpp  SubjectsTreeView.h  TreeItem.cpp  TreeItem.h  TreeModel.cpp  TreeModel.h  TreeView.cpp  TreeView.h
src/ihm/: BaseFrame.cpp  BaseFrame.h  CMakeLists.txt  GenerationFrame.cpp  GenerationFrame.h  GenerationFrame.ui  PreferencesFrame.cpp  PreferencesFrame.h  PreferencesFrame.ui  ProgressionFrame.cpp  ProgressionFrame.h  ProgressionFrame.ui  ProtocolsFrame.cpp  ProtocolsFrame.h  ProtocolsFrame.ui  SubjectsFrame.cpp  SubjectsFrame.h  SubjectsFrame.ui  mainframe.cpp  mainframe.h  mainframe.ui  resources.qrc
src/ihm/components/: ProtocolsTreeItem.cpp  ProtocolsTreeItem.h  ProtocolsTreeModel.cpp  ProtocolsTreeModel.h  ProtocolsTreeView.cpp  ProtocolsTreeView.h  SubjectsTreeItem.cpp  SubjectsTreeItem.h  SubjectsTreeItemData.cpp  SubjectsTreeItemData.h  SubjectsTreeModel.cpp  SubjectsTreeModel.h  SubjectsTreeView.cpp  SubjectsTreeView.h  TreeItem.cpp  TreeItem.h  TreeModel.cpp  TreeModel.h  TreeView.cpp  TreeView.h
src/js/: CMakeLists.txt  common.js
src/js/bruker2dicom/: common.js  converter.js  enhanced_mr_image_storage.js  frame_index_generator.js  mr_image_storage.js
src/js/dicom2nifti/: common.js  converter.js  mr_image_storage.js
src/lib/: CMakeLists.txt
src/lib/bruker/: BrukerDataset.cpp  BrukerDataset.h  BrukerDirectory.cpp  BrukerDirectory.h  BrukerFieldData.cpp  BrukerFieldData.h  BrukerParser.h  Dataset.cpp  Dataset.h  Directory.cpp  Directory.h  Field.cpp  Field.h  RulesAction.cpp  RulesDocument.cpp  grammar.h  grammar.txx  json_converter.cpp  json_converter.h
src/lib/core/: DateTime.cpp  DateTime.h  DicomifierException.h  Endian.cpp  Endian.h  Exception.cpp  Exception.h  Factory.cpp  Factory.h  Factory.txx  FrameIndexGenerator.cpp  FrameIndexGenerator.h  Hashcode.h  Logger.cpp  Logger.h  Object.h  Rule.cpp  Rule.h  XmlToRules.cpp  XmlToRules.h
src/lib/dicom/: DicomDirGenerator.cpp  DicomDirGenerator.h  Dictionaries.cpp  Dictionaries.h  Dictionary.cpp  Dictionary.h  ElementTraits.cpp  ElementTraits.h  SCU.cpp  SCU.h  SOPClass.h  StoreDataset.cpp  StoreDataset.h  StoreSCU.cpp  StoreSCU.h  TagAndRange.h
src/lib/javascript/: JavascriptVM.cpp  JavascriptVM.h  LoggerJS.cpp  LoggerJS.h  bruker.cpp  bruker.h  common.cpp  common.h  common.txx  dicom.cpp  dicom.h  nifti.cpp  nifti.h
src/lib/nifti/: Dicom2Nifti.cpp  Dicom2Nifti.h
src/lib/translator/: SubTag.h  SubTag.txx  Tag.cpp  Tag.h  TranslationCreatorBase.cpp  TranslationCreatorBase.h  TranslatorFactory.cpp  TranslatorFactory.h  TranslatorFactory.txx  VRToField.h
src/python/: CMakeLists.txt  dicomifier.i  wrapper.cpp  wrapper.h
src/python/dicomifier/: CMakeLists.txt  DicomifierException.cpp  Exception.h  __init__.py  __main__.py  dicomifier.cpp  exception_factory.cpp  exception_factory.h  meta_data.py
tests/: CMakeLists.txt  download_data  run_tests.sh
tests/code/bruker/: BrukerDataset.cpp  BrukerDirectory.cpp  BrukerFieldData.cpp  Dataset.cpp  Directory.cpp  Field.cpp  grammar.cpp  json_converter.cpp  testBruker2Dicom.cpp
tests/code/core/: DateTime.cpp  DicomifierException.cpp  Exception.cpp  Factory.cpp  FrameIndexGenerator.cpp  Logger.cpp  Rule.cpp  XmlToRules.cpp
tests/code/dicom/: DcmQrSCP.h  DicomDirGenerator.cpp  Dictionaries.cpp  Dictionary.cpp  SCU.cpp  SOPClass.cpp  StoreDataset.cpp  StoreSCU.cpp
tests/code/javascript/: JavascriptVM.cpp  LoggerJS.cpp  (+1 more)
tests/diff/: diff.py  list.py  to_dicom.py  to_nifti.py
tests/js/: TestDataJS.h  common.cpp
tests/python/: test_exception.py  test_meta_data.py
(+552 files in other folders)
